--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,9 +47,9 @@ jobs:
 
     # This step runs unit tests with pytest
     # (we need -m so that our tests can find our notebook code)
-    #- name: Test with pytest
-    #  run: |
-    #    uv run -m pytest
+    - name: Test with pytest
+      run: |
+        uv run -m pytest
 
     # This step runs the linter against the codebase
     - name: Lint with ruff
@@ -59,12 +59,4 @@ jobs:
     # Steps to run formatting steps and type checking
     - name: format
       run: |
-        uvx ruff format 
-
-    - name: sort
-      run: |
-        uvx isort . 
-
-    - name: type check
-      run: |
-        uvx ty check
+        uvx ruff format .
